--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha384-GLhlTQ8iKIo7T6YO55ibZ6uwQWuf+P5P5FME/W5G0FFhhUefQ5C2KBpHj61z6L4N" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Resturant Reservation</title>
 </head>
+
 <body>
-    
+    <div class="header">
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+        </nav>
+
+        <div class="authentication-ops">
+            <a href="#login">Log In</a>
+            <a href="#signup">Sign Up</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <h1>Zgjedh ku po rezervojna</h1>
+        <div class="link-container">
+            <a href="#link1"><i class="fa-solid fa-map-pin" style="color: #6e6868;"></i>Resturant 1</a>
+            <a href="#link2">Resturant 2</a>
+            <a href="#link3">Resturant 3</a>
+        </div>
+    </div>
     <script src="../js/app.js"></script>
 </body>
+
 </html>
