Login and sign up and validate fields.

--- a/html/index-products.html
+++ b/html/index-products.html
@@ -34,7 +34,7 @@
                 <input type="time" id="appt" name="appt" min="09:00" max="18:00" required />
             </div>
             <div>
-                <input type="number" class="" placeholder="Nr. Personave">
+                <input type="number" class="" min="1" placeholder="Nr. Personave">
                 <button class="search-button">Rezervoni</button>
             </div>
         </form>
