--- a/html/login.html
+++ b/html/login.html
@@ -11,15 +11,15 @@
 <body>
     <div class="header">
         <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
+            <a href="../html/index.html">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
         </nav>
 
         <div class="authentication-ops">
-            <a href="#login">Log In</a>
-            <a href="#signup">Sign Up</a>
+            <a href="../html/login.html">Log In</a>
+            <a href="../html/login.html">Sign Up</a>
         </div>
     </div>
 
